tests/negative/neg_unknown_imported_member.safe
-- Test: neg_unknown_imported_member
-- Description: Reject package-qualified references that are absent from the imported interface.
-- Expected: REJECT source_frontend_error

with provider_channel

package unknown_imported_member_test

   task sender
      sent : boolean = false

      loop
         send provider_channel.unknown_ch, 1, sent
